--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Method Code</span>
                   </a>
                 </span>
 
@@ -114,6 +114,18 @@
                   <span>arXiv</span>
                 </a>
               </span>
+
+                <!-- Video Link -->
+                <span class="link-block">
+                  <a href="https://all-tact.github.io/" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>Video(Coming Soon)</span>
+                </a>
+              </span>
+                      
             </div>
           </div>
         </div>
