--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <a href="https://all-tact.github.io/" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="ai ai-arxiv"></i>
+                    <i class="fas fa-video"></i>
                   </span>
                   <span>Video(Coming Soon)</span>
                 </a>
