--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
 <!-- Teaser video-->
 <section class="hero teaser">
-  <div class="container is-max-widescreen">
+  <div class="container">
+    <div class="column is-four-fifths">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
@@ -145,15 +146,15 @@
         type="video/mp4">
       </video>
     </div>
+    </div>
   </div>
 </section>
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
-  <div class="container is-max-widescreen">
+  <div class="container">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
@@ -161,7 +162,6 @@
           </p>
         </div>
       </div>
-    </div>
   </div>
 </section>
 <!-- End paper abstract -->
