--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <!-- Teaser video-->
 <section class="hero teaser">
-  <div class="container">
+  <div class="container is-max-widescreen">
     <div class="column is-four-fifths">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
@@ -153,7 +153,7 @@
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
-  <div class="container">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
@@ -167,23 +167,21 @@
 <!-- End paper abstract -->
 
   
-<!-- Image carousel -->
+<!-- Single Image -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
+      <div class="single-image">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           First image description.
         </h2>
       </div>
+    </div>
   </div>
-</div>
-</div>
 </section>
-<!-- End image carousel -->
+<!-- End single image -->
 
 
   
