--- a/index.html
+++ b/index.html
@@ -138,23 +138,25 @@
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-widescreen">
-    <div class="column is-four-fifths">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
+      <h1 class="title is-4 is-centered has-text-centered">
+        The gripper is automatically adjusting its poses according to tactile feedback.
+      </h1>
+      <video poster="" id="tree" autoplay controls muted loop height="100%" style="border-radius: 10px;">
         <!-- Your video here -->
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video>
-    </div>
     </div>
   </div>
 </section>
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
+      <div class="column">  <!-- 添加 column 包裹标题和内容 -->
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
@@ -162,64 +164,303 @@
           </p>
         </div>
       </div>
+    </div>
   </div>
 </section>
 <!-- End paper abstract -->
 
-  
-<!-- Single Image -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div class="single-image">
-        <!-- Your image here -->
-        <img src="" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+<div class="cards">
+  <!-- 需分配宽度给卡片单元格 -->
+  <div class="container is-max-widescreen">
+    <div class="columns is-centered has-text-centered">
+      <div class="cards__item">
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <img src="static/images/finger.png" alt="MY ALT TEXT" style="border-radius: 10px"></td>
+          </div> 
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-<!-- End single image -->
-
-
-  
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
+      <div class="cards__item">
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <img src="static/images/gripper.png" alt="MY ALT TEXT" style="border-radius: 10px"></td>
+          </div> 
+        </div>
+      </div>
+      <div class="cards__item">
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <img src="static/images/principle.png" alt="MY ALT TEXT" style="border-radius: 10px"></td>
+          </div> 
+        </div>
+      </div>
+      <div class="cards__item">
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <img src="static/images/grasp.png" alt="MY ALT TEXT" style="border-radius: 10px"></td>
+          </div> 
         </div>
       </div>
     </div>
   </div>
-</section>
-<!-- End youtube video -->
+</div>  
 
-  
+<br><br><br>
+<div class="columns is-centered has-text-centered">
+  <h2 class="title is-3">Hardware Design</h2>
+</div>
+
+<div class="container is-max-widescreen">
+  <div class="columns is-centered has-text-centered">
+    <h2 class="title is-4">
+      <a href="static/pdfs/English_how_to_make.pdf" class="pdf-link">Click here to view the detailed production process</a>
+    </h2>
+  </div>
+
+  <div class="columns is-centered has-text-centered">
+    <!-- 文本列：分配 50% 宽度 -->
+    <div class="cards__item column is-5">  <!-- 关键修改 -->
+      <div class="content has-text-justified">
+        <div class="column">  <!-- 移除 is-8 -->
+          <p> 
+            The whole finger body is
+            cast in transparent elastic silicone such that it can deform
+            and fit to the object during grasping and manipulation. We change the original design of the Fin
+            Ray finger and thicken the contact-side in order to capture the contact face using the camera at the
+            bottom of the finger. An extra layer of semitransparent silicone is cast above the contact face for local
+            geometry reconstruction. The surfaces of the finger body are
+            further painted black to block the environmental illumination.
+            </p>
+            </p>
+            The sensor utilizes simple white LEDs for illumination. Additionally, we
+            incorporate an isolating ring between the camera and LEDs to
+            prevent direct light from the LEDs from entering the camera,
+            ensuring accurate imaging.
+            The side faces feature dotted markers along the edges, which
+            are tracked during sensing to obtain the reference image corresponding to real-time image and accomplish reconstruction.
+            Due to the perspective
+            projection of the imaging process, the radius and spacing of
+            the markers increase proportionally with their distance from
+            the camera, ensuring relatively uniform marker sizes in the
+            captured image.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- 图片列：分配 50% 宽度 -->
+    <div class="cards__item column is-6">  <!-- 关键修改 -->
+      <div class="columns is-centered">
+        <img src="static/images/cutaway.jpg" alt="..." style="border-radius: 10px">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container is-max-widescreen">
+  <div class="columns is-centered has-text-centered">
+    <!-- 图片列：分配 50% 宽度 -->
+    <div class="cards__item column is-6">  <!-- 关键修改 -->
+      <div class="columns is-centered">
+        <img src="static/images/fabrication.jpg" alt="..." style="border-radius: 10px">
+      </div>
+    </div>
+
+    <!-- 文本列：分配 50% 宽度 -->
+    <div class="cards__item column is-5">  <!-- 关键修改 -->
+      <div class="content has-text-justified">
+        <div class="column">  <!-- 移除 is-8 -->
+          <p> 
+            An AllTact Fin Ray Finger is fabricated through a multi-step process: First, the finger base, sensor shell, 
+            and casting molds are 3D-printed using white and black resins. The finger body is unibody-cast 
+            with transparent silicone for structural rigidity, followed by a 1.5 mm soft semi-transparent 
+            contact layer, and a thin, dyed black, non-transparent layer for tactile sensitivity. After solidifying, the finger is demolded, 
+            then the finger is assembled by adhering it to the base, securing the sensor shell with screws, integrating an LED board with 
+            an isolating ring, and mounting a 1080p camera (85° FOV). Finally, the surface is coated with black paint to reduce ambient light 
+            interference, and laser-engraved dot markers are added for geometry reconstruction. The direct casting of layers ensures robust 
+            bonding during deformation.
+            </p>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<br><br><br>
+<div class="columns is-centered has-text-centered">
+  <h2 class="title is-3">Sensing Principles</h2>
+</div>
+<br>
+<div class="container">
+  <div class="columns is-max-desktop is-centered">
+
+    <div class="column is-4-desktop has-text-centered">
+      <img src="static/images/principle_00.jpg" class="is-rounded" alt="网络结构二维图">
+      <div class="content has-text-justified">
+      Diagram of deformation and calibraion of our finger during contact,
+      where a ball with known radius is pressed onto the contact face for sensor
+      calibration. The camera pinhole model is employed to compute the 3D
+      coordinate of c, which is further used to calculate the press depth.
+      </div>
+    </div>
+
+    &emsp;&emsp;
+
+    <div class="column is-5-desktop has-text-centered">
+      <img src="static/images/pipeline.jpg" class="is-rounded" alt="数据处理流程">
+      <div class="content has-text-justified">
+        The pipeline of local geometry reconstruction. we dynamically retrieve
+        the reference image from the video by using marker tracking, compute the
+        brightness difference, and reconstruct the local depth.
+      </div>
+
+      <img src="static/images/network_2d.jpg" class="is-rounded" alt="网络结构二维图">
+      <div class="content has-text-justified">
+        Neural network architecture for force magnitude prediction. A neural network is developed to predict
+        the contact force magnitude using marker displacements and
+        contact location. 
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<br><br><br>
+<div class="columns is-centered has-text-centered">
+  <h2 class="title is-3">Performance Characteristics</h2>
+</div>
+<br>
+
+<div class="container">
+  <div class="columns is-max-desktop is-centered">
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/local.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/angle.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+    &emsp;&emsp;&emsp;
+    </p>
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/scatter.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/matrix.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+  </div>
+
+  <div class="columns is-max-desktop is-centered">
+    <div class="column is-4-desktop has-text-centered">
+      <div class="content has-text-justified">
+        Comparison of the distance between the positions detected by the sensor, 
+        the Angle of the grasped object and the GroundTruth value
+      </div>
+    </div>
+    &emsp;&emsp;&emsp;
+    <div class="column is-4-desktop has-text-centered">
+      <div class="content has-text-justified">
+        Comparison of the contact direction detected by the sensor and acrtual contact direction. 
+      </div>
+    </div>
+  </div>
+
+
+  <div class="columns is-max-desktop is-centered">
+    <div class="column is-4-desktop has-text-centered">
+      <img src="static/images/force_result_00.jpg" class="is-rounded" alt="数据处理流程">
+    </div>
+    &emsp;&emsp;&emsp;&emsp;
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/force_x.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+    <div class="column is-2-desktop has-text-centered">
+      <img src="static/images/force_y.png" class="is-rounded" alt="网络结构二维图">
+    </div>
+  </div>
+
+  <div class="columns is-max-desktop is-centered">
+    <div class="column is-4-desktop has-text-centered">
+      <div class="content has-text-justified">
+        Minimum force thresholds for contact detected in various directions and at different heights
+      </div>
+    </div>
+    &emsp;&emsp;&emsp;
+    <div class="column is-4-desktop has-text-centered">
+      <div class="content has-text-justified">
+        Comparison of the force magnitudes detected by the sensor and GroundTruth value. 
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+<br><br><br>
+<div class="columns is-centered has-text-centered">
+  <h2 class="title is-3">Capability Experiments</h2>
+</div>
+
+<div class="container is-max-widescreen">
+  <div class="hero-body">
+    <div class="columns is-centered has-text-centered">
+      <h1 class="title is-4 is-centered has-text-centered">
+        Object grasping and real-time reconstruction
+      </h1>
+    </div>
+    <video poster="" id="tree" autoplay controls muted loop height="100%" style="border-radius: 10px;">
+      <!-- Your video here -->
+      <source src="static/videos/realtime.mp4"
+      type="video/mp4">
+    </video>
+  </div>
+
+  <div class="hero-body">
+    <div class="columns is-centered has-text-centered">
+      <h1 class="title is-4 is-centered has-text-centered">
+        Automatically avoid obstacles when detected.
+      </h1>
+    </div>
+    <video poster="" id="tree" autoplay controls muted loop height="100%" style="border-radius: 10px;">
+      <!-- Your video here -->
+      <source src="static/videos/avoid.mp4"
+      type="video/mp4">
+    </video>
+  </div>
+
+  <div class="hero-body">
+    <div class="columns is-centered has-text-centered">
+      <h1 class="title is-4 is-centered has-text-centered">
+        Automatically adjust gripper poses according to tactile feedback.
+      </h1>
+    </div>
+    <video poster="" id="tree" autoplay controls muted loop height="100%" style="border-radius: 10px;">
+      <!-- Your video here -->
+      <source src="static/videos/pose.mp4"
+      type="video/mp4">
+    </video>
+  </div>
+</div>
+
+
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{liang2025alltactfinraycompliant,
+        title={AllTact Fin Ray: A Compliant Robot Gripper with Omni-Directional Tactile Sensing}, 
+        author={Siwei Liang and Yixuan Guan and Jing Xu and Hongyu Qian and Xiangjun Zhang and Dan Wu and Wenbo Ding and Rui Chen},
+        year={2025},
+        eprint={2504.18064},
+        archivePrefix={arXiv},
+        primaryClass={cs.RO},
+        url={https://arxiv.org/abs/2504.18064}, 
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
 
 
-
-
-
-  
   <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
